include_directories(.)

add_oj_submittable(P_Algorithm_Design_and_Analysis_cpp . main)
add_oj_submittable(Lab4ProblemB cn/edu/SUSTech/YeCanming/Algs/lab4 ProblemB_ManhattanServers)
add_oj_submittable(Lab4ProblemA cn/edu/SUSTech/YeCanming/Algs/lab4 ProblemA_Postman)
add_oj_submittable(Lab7ProblemB cn/edu/SUSTech/YeCanming/Algs/lab7 problemB)
add_oj_submittable(Lab8ProblemA cn/edu/SUSTech/YeCanming/Algs/lab8 problemA)
add_oj_submittable(Lab8ProblemB cn/edu/SUSTech/YeCanming/Algs/lab8 problemB)
add_oj_submittable(CDQ_DC cn/edu/SUSTech/YeCanming/Algs/DivideAndConquer/CDQ PartialOrder3D)
add_oj_submittable(CDQ_DC_Inversion1 cn/edu/SUSTech/YeCanming/Algs/DivideAndConquer/CDQ/inversion CDQ_Inversion)
add_oj_submittable(CDQ_DC_Inversion2 cn/edu/SUSTech/YeCanming/Algs/DivideAndConquer/CDQ/inversion MergeSortAndCnt)
add_oj_submittable(CDQ_DC_Inversion3 cn/edu/SUSTech/YeCanming/Algs/DivideAndConquer/CDQ/inversion BIT_Inversion)
add_oj_submittable(DivideAndConquerStructBIT1 cn/edu/SUSTech/YeCanming/Algs/DivideAndConquer/Structure BIT1)
add_oj_submittable(DivideAndConquerStructBIT2 cn/edu/SUSTech/YeCanming/Algs/DivideAndConquer/Structure BIT2)
add_oj_submittable(B3624 cn/edu/SUSTech/YeCanming/Algs/DynamicProgramming B3624_cat_food)
add_oj_submittable(Lab9A cn/edu/SUSTech/YeCanming/Algs/lab9 problemA)
add_oj_submittable(Lab9B cn/edu/SUSTech/YeCanming/Algs/lab9 problemB)

find_package(ZLIB REQUIRED)
add_executable(ZipMain cn/edu/SUSTech/YeCanming/Algs/Zip/ZipMain.cpp)
target_link_libraries(ZipMain ZLIB::ZLIB)